<resources>
    <string name="app_name">MyFirstApp1</string>
    <string name="_0">200</string>
    <string name="toast">Toast</string>
    <string name="count">+</string>
    <string name="random">Random</string>
    <string name="random_heading">Here is a random number from 0 to %1d</string>
    <string name="random_number">R</string>
    <string name="take">Take some apple pie</string>
    <string name="textView2">0</string>
    <string name="autoButSecAct">Auto</string>
    <string name="plus_one">+1</string>
    <string name="nav_open">open</string>
    <string name="nav_close">close</string>
    <string name="navigation_drawer_open">Open navigation bar</string>
    <string name="navigation_drawer_close">Close Navigation bar</string>
</resources>